fix: fix text align style in show error

--- a/src/components/experiences/message/styles.css
+++ b/src/components/experiences/message/styles.css
@@ -22,7 +22,6 @@
     font-size: 14px;
     font-weight: 300;
     flex-grow: 1;
-    text-align: center;
 }
 
 .rainbow-auth-firebase-message_icon, .rainbow-auth-firebase-message_close-button {
